FullSb1-27-apr-15/src/objects/Opportunity_Finance__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation_Deposit_Duex__c</fullName>
        <formula>Accommodation_Depositx__c - Non_BBA_Accommodation_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Deposit Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Deposit_FS__c</fullName>
        <formula>Accommodation_Depositx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Depositx__c</fullName>
        <formula>((Annual_Accommodation_Fee__c)/(value(text(Accommodation_weeks__c)))*4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Fee_Due__c</fullName>
        <formula>Annual_Accommodation_Fee__c -  OP_Depost_Paid_Method_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Fee_Paid__c</fullName>
        <label>Accommodation Fee Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_License_Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accommodation License Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_deposit_paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This was created for the .net guys on request of Mr VIJAY ANAND</description>
        <label>Accommodation deposit paid boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_deposit_paid_date__c</fullName>
        <description>This was created for sake of .net people on request by mail</description>
        <label>Accommodation deposit paid date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accommodation_weeks__c</fullName>
        <description>Should feed from customer landing page and automatically populate based on customer choice on that page
This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation Weeks</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aetna_Insurance_Price__c</fullName>
        <label>Aetna Insurance Price</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aetna_Insurance__c</fullName>
        <label>Aetna Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single 6 months (visiting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Spouse &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single &amp; 2 Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Accommodation_Fee__c</fullName>
        <label>Accommodation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>App ID</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <formula>Opportunity__r.Contact__r.FirstName +Opportunity__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid_Date__c</fullName>
        <label>Application Fee Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid__c</fullName>
        <label>Application Fee Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Application Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Due_BBA__c</fullName>
        <formula>(BBA_Accommodation_Deposit__c+BBA_Accommodation_Deposit_Year_2__c+BBA_Accommodation_Deposit_Year_3__c+BBA_Accommodation_Deposit_Year_4__c) -  BBA_Accommodation_Deposit_Paid_BBA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Deposit Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Paid_BBA__c</fullName>
        <label>Accommodation Deposit Paid</label>
        <summarizedField>Finance_Transactions__c.Amount_Received_New__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Accommodation Deposit, Accommodation Deposit Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Finance_Transactions__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success, Manually Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Transactions__c.Finance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accommodation Deposit Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Year_2__c</fullName>
        <label>Accommodation Deposit - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Year_3__c</fullName>
        <label>Accommodation Deposit - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit_Year_4__c</fullName>
        <label>Accommodation Deposit - Year 4</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Deposit__c</fullName>
        <formula>If(BBA_Accommodation_Deposit_Refunded__c = TRUE,0,((BBA_Accommodation_Fee_Year_1__c)/(value(text(BBA_Accommodation_Weeks_Year_1__c)))*4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Deposit - Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Fee_Year_1__c</fullName>
        <description>BBA Only</description>
        <label>Accommodation Fee - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Fee_Year_2__c</fullName>
        <description>BBA Only</description>
        <label>Accommodation Fee - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Fee_Year_3__c</fullName>
        <description>BBA Only!</description>
        <label>Accommodation Fee - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Weeks_Year_1__c</fullName>
        <description>BBA Only!
This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation Weeks - Year 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Weeks_Year_2__c</fullName>
        <description>BBA Only!
This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation Weeks - Year 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Weeks_Year_3__c</fullName>
        <description>BBA Only!
This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation Weeks - Year 3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Year_1__c</fullName>
        <description>BBA Only
This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation - Year 1</label>
        <picklist>
            <controllingField>Campus_Program__c</controllingField>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse Luxury Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apt. Extra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai - Single Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Housing Bursary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free accommodation with dependent – 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Year_2__c</fullName>
        <description>This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation - Year 2</label>
        <picklist>
            <controllingField>Campus_Program__c</controllingField>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse Luxury Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apt. Extra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai - Single Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Housing Bursary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free accommodation with dependent – 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Accommodation_Year_3__c</fullName>
        <description>This field picklist values and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Accommodation - Year 3</label>
        <picklist>
            <controllingField>Campus_Program__c</controllingField>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Twin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse Luxury Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe Studio Apt. Extra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai - Single Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Housing Bursary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Hult Accommodation – 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation with dependent for 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free accommodation with dependent – 8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai Accommodation Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Single SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bunk Studio Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBA_Additional_Credits_Charged_Yr5__c</fullName>
        <formula>+if((BBA_Earned_Credits_Total__c)&lt;120,(BBA_Earned_Credits_Yr5__c + BBA_Earned_Credits_Total__c - 120)+BBA_Withdrawn_Credits_Yr5__c+BBA_Failed_Credits_Yr5__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Credits Charged Yr5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Additional_Credits_Taken_Total__c</fullName>
        <formula>+ BBA_Additional_Credits_Taken_Yr1__c + BBA_Additional_Credits_Taken_Yr2__c + BBA_Additional_Credits_Taken_Yr3__c + BBA_Additional_Credits_Taken_Yr4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Credits Charged Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Additional_Credits_Taken_Yr1__c</fullName>
        <label>Additional Credits Charged Yr1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Additional_Credits_Taken_Yr2__c</fullName>
        <label>Additional Credits Charged Yr2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Additional_Credits_Taken_Yr3__c</fullName>
        <label>Additional Credits Charged Yr3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBA_Adjustment_Amount_Year_1_BBA__c</fullName>
        <description>BBA Only</description>
        <label>Adjustment Amount - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>